--- a/datacount.html
+++ b/datacount.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html>
+   <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,47 +13,12 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js">
 	</script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-queue/1.0.7/d3-queue.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
-<body>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Navbar</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Intro <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="multi.html">Multi</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="queue.html">Queue</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="pie-chart.html" >Pie</a>
-					</li>
-                    <li class="nav-item">
-						<a class="nav-link" href="line-graphs.html">Line</a>
-					</li>
-                    <li class="nav-item">
-						<a class="nav-link" href="composite-graphs.html">Composite</a>
-                    </li>
-                    <li class="nav-item">
-						<a class="nav-link" href="stacked.html">Stacked</a>
-					</li>
-                    <li class="nav-item">
-						<a class="nav-link" href="scatter.html">Scatterplot</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-	<div>
+   
+   <body>
+      <div>
          <div style = "width: 600px;">
             <div id = "mystats" class = "dc-data-count" style = "float: right">
                <span class = "filter-count"></span> selected out of <span
@@ -75,13 +38,12 @@
          var barChart = dc.barChart('#line'); // , 'myChartGroup');
          var countChart = dc.dataCount("#mystats");
 
-         d3.json("data/transactions.json", function(errors, transactionsData) {
+         d3.csv("data/transactions.json", function(errors, transactionsData) {
             var mycrossfilter = crossfilter(transactionsData);
 
             // age dimension
             var ageDimension = mycrossfilter.dimension(function(data) { 
-               return data.date;
-               console.log("yes");
+               return ~~((Date.now() - new Date(data.DOB)) / (31557600000)) 
             });
             var ageGroup = ageDimension.group().reduceCount();
 
@@ -103,7 +65,6 @@
             barChart.render();
             countChart.render();
          });
-	</script>
-</body>
-
+      </script>
+   </body>
 </html>
