--- a/queue.html
+++ b/queue.html
@@ -52,6 +52,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="scatter.html">Scatterplot</a>
 					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="form.html">Form</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
