--- a/form.html
+++ b/form.html
@@ -37,30 +37,14 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">Intro <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">Charts <span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="multi.html">Multi</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="queue.html">Queue</a>
-					</li>
+					
 					<li class="nav-item">
 						<a class="nav-link" href="pie-chart.html">Pie</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="line-graphs.html">Line</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="composite-graphs.html">Composite</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="stacked.html">Stacked</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="scatter.html">Scatterplot</a>
-					</li>
-					<li class="nav-item">
+					
+					<li class="nav-item active">
 						<a class="nav-link" href="form.html">Form</a>
 					</li>
 				</ul>
