--- a/form.html
+++ b/form.html
@@ -28,6 +28,9 @@
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<!--------------------------->
+	<!--My JavaScript link-------------->
+	<script type="text/javascript" src="js/main.js"></script>
+
 
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 
@@ -68,67 +71,53 @@
 	</div>
 
 	<div class="container">
-		<form action="transactions.json" method="post">
+		<button type="button" class="btn btn-success" id="newPlayer">Add New Player</button>
+		<input type="text" placeholder="Player Name" id="newPlayerName">
+		<button id="enterButton">Enter</button>
+		<form>
 			<div class="form-row justify-content-around">
 				<div class="form-group col-md-4">
 					<input type="text" id="datepicker" placeholder="Date">
                 </div>
-				<div class="form-group col-md-4">
-					<select id="activity" class="form-control">
+					<div class="form-group col-md-4">
+						<select id="activity" class="form-control">
                         <option>Training</option>
                         <option>Friendly</option>
                         <option>Match</option>
                      </select>
-				</div>
-				<div class="form-group col-md-4">
-					<textarea class="form-control" id="opponent" rows="1" placeholder="Opposition"></textarea>
-				</div>
-				
+					</div>
+					<div class="form-group col-md-4">
+						<textarea class="form-control" id="opponent" rows="1" placeholder="Opposition"></textarea>
+					</div>
 
-				<div class="container">
-					<div class="row">
-						<div class="col-5">
-							<p><strong>Player</strong></p>
-						</div>
-						<div class="col-2">
-							<p><strong>Goals</strong></p>
-						</div>
-						<div class="col-2">
-							<p><strong>Assists</strong></p>
-						</div>
-						<div class="col-2">
-							<p><strong>Rating</strong></p>
+
+					<div class="container">
+						<div class="row">
+							<div class="col-5">
+								<p><strong>Player</strong></p>
+							</div>
+							<div class="col-2">
+								<p><strong>Goals</strong></p>
+							</div>
+							<div class="col-2">
+								<p><strong>Assists</strong></p>
+							</div>
+							<div class="col-2">
+								<p><strong>Rating</strong></p>
+							</div>
 						</div>
 					</div>
 				</div>
+				<div id="data">
+                </div>
             </div>
-			<div id="data"></div>
 		</form>
 	</div>
-
-	<div class="form-group">
-		<div class="form-check">
-			<input class="form-check-input" type="checkbox" id="gridCheck">
-			<label class="form-check-label" for="gridCheck">Check me out</label>
-		</div>
-	</div>
-	<button type="submit" class="btn btn-primary">Sign in</button>
-
-
-	</div>
-
 
 	<div class="container">
 		<div class="row">
 			<div class="col-12 heading">
-				<button onclick="writeToDocument('people')">People</button>
-				<button onclick="writeToDocument('planets')">Planets</button>
-				<button onclick="writeToDocument('species')">Species</button>
-				<button onclick="writeToDocument('starships')">Starships</button>
-				<button onclick="writeToDocument('vehicles')">Vehicles</button>
-				<button onclick="writeToDocument('films')">Films</button>
-
-
+				<button onclick="writeToDocument('people')">Populate Player List</button>
 			</div>
 		</div>
 	</div>
@@ -138,8 +127,7 @@
 
 
 
-	<!--JavaScript link-------------->
-	<script type="text/javascript" src="js/main.js"></script>
+
 
 </body>
 
