--- a/form.html
+++ b/form.html
@@ -110,6 +110,7 @@
 				</div>
 				<div id="data">
                 </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
 		</form>
 	</div>
@@ -117,7 +118,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 heading">
-				<button onclick="writeToDocument('people')">Populate Player List</button>
+				<button onclick="writeToDocument()">Populate Player List</button>
 			</div>
 		</div>
 	</div>
