Add paragraph to home page.
Fixes PeterKellett/project-2#2

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 			</div>
 		</div>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <p>Kids love to see how they're doing and compared to each other. Select a name from the drop down menus and see their stats refocus.</p>
+                </div>
+            </div>
+        </div>
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-6">
