--- a/form.html
+++ b/form.html
@@ -37,38 +37,26 @@
 	<title>Input form</title>
 </head>
 
-<body class="container-fluid">
+<body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Navbar</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Charts <span class="sr-only">(current)</span></a>
-					</li>
-
-					<li class="nav-item">
-						<a class="nav-link" href="pie-chart.html">Pie</a>
-					</li>
-
-					<li class="nav-item active">
-						<a class="nav-link" href="form.html">Form</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
+		<div class="container-fluid">
+		    <div class="row">
+			    <div class="col-12 text-center heading">
+				    <h1>ESKER <span>CELTIC</span> U13's</h1>
+			    </div>
+		    </div>
+	    </div>
 	</header>
 
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-12 text-center heading">
-				<h1>ESKER <span>CELTIC</span> U13's</h1>
-			</div>
-		</div>
-	</div>
+	
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-4 nav-button">
+                <a class="btn btn-primary nav-button" href="index.html" role="button">Back to charts</a>
+            </div>
+        </div>
+    </div>
 
 	<div class="container">
 		<button type="button" class="btn btn-success" id="newPlayer">Add New Player</button>
