Made minor changes to the homepage grid
Fixes PeterKellett/project-2#4

--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
 		<div class="container-fluid">
 		    <div class="row">
 			    <div class="col-12 text-center heading">
-				    <h1>ESKER <span>CELTIC</span> U13's</h1>
+				    <h1><img src="images/EskerCrest.JPG">ESKER <span>CELTIC</span> U13's</h1> 
 			    </div>
 		    </div>
 	    </div>
@@ -52,8 +52,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-4 nav-button">
-                <a class="btn btn-primary nav-button" href="index.html" role="button">Back to charts</a>
+                <a class="btn btn-primary" href="index.html" role="button">Back to charts</a>
             </div>
         </div>
     </div>
