--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-12 text-center heading">
-				<h1>ESKER <span>CELTIC</span> U13's</h1>
+				<h1><img src="images/EskerCrest.JPG">ESKER <span>CELTIC</span> U13's</h1>
 			</div>
 		</div>
 
@@ -111,7 +111,7 @@
         var stackedChart = dc.barChart("#attendance-chart");
         stackedChart
             .width(600)
-            .height(200)
+            .height(200) 
             .dimension(name_dim)
             .group(start, "Start")
             .stack(sub, "Sub")
