--- a/index.html
+++ b/index.html
@@ -7,15 +7,38 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>D3 and Scalable Vector Graphics</title>
 
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
+
+	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+	<!-- dc CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.min.css" type="text/css" />
 
+	<!-- d3 charting library -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+	<!-- Crossfilter charting library -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js">
 	</script>
+	<!-- dc charting library -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+	<!-- queue charting library -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-queue/1.0.7/d3-queue.min.js"></script>
+
+	<!--My JavaScript link-------------->
+	<script type="text/javascript" src="js/main.js"></script>
+
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
@@ -28,27 +51,43 @@
 			</div>
 		</div>
 
-        <div class="container intro">            
-            <p>Kids love to see how they're doing and how they compare to each other. Select a name from the drop down menus and see how their stats refocus.</p>               
-        </div>
+		<div class="container intro">
+			<p>Kids love to see how they're doing and how they compare to each other. Select a name from the drop down
+				menus and see how their stats refocus.</p>
+		</div>
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="btn-group">
+					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown"                 aria-haspopup="true" aria-expanded="false">Player Names
+                    </button>
+					<div class="dropdown-menu" id="player-menu">
+						<a class="dropdown-item" href="#">Action</a>
+						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Something else here</a>
+						<a class="dropdown-item" href="#">Separated link</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-6">
-                    <div class="row justify-content-center">
+					<div class="row justify-content-center">
 						<h5>Match Attendance Start/Sub</h5>
 					</div>
 					<div class="row">
 						<div id="attendance-chart"></div>
 					</div>
-                    <div class="row justify-content-center">
-						<p>This chart shows the number of games each player has played split between the number of matches started and the number to which they were a substitute.</p>
+					<div class="row justify-content-center">
+						<p>This chart shows the number of games each player has played split between the number of
+							matches started and the number to which they were a substitute.</p>
 					</div>
 				</div>
 
-                <div class="col-12 col-lg-6">
-                    <div class="row justify-content-center">
+				<div class="col-12 col-lg-6">
+					<div class="row justify-content-center">
 						<h5>Ratings Chart</h5>
 					</div>
 					<div class="row">
@@ -57,23 +96,23 @@
 					<div class="row justify-content-center">
 						<p>This chart shows the match rating each player has acquired each matchday week.</p>
 					</div>
-                </div>
-            </div>
+				</div>
+			</div>
 
-            <div class="row">
-                <div class="col-12 col-lg-6">
-                    <div class="row justify-content-center">
+			<div class="row">
+				<div class="col-12 col-lg-6">
+					<div class="row justify-content-center">
 						<h5>Total Goals/Assists Per Person</h5>
 					</div>
 					<div class="row">
 						<div id="goals-per-person-chart"></div>
-					</div>	
-                    <div class="row justify-content-center">
+					</div>
+					<div class="row justify-content-center">
 						<p>This chart shows the number of goals and assists each player made.</p>
-					</div>			
+					</div>
 				</div>
 				<div class="col-12 col-lg-6">
-                    <div class="row justify-content-center">
+					<div class="row justify-content-center">
 						<h5>Total Goals/Assists Per Opponent</h5>
 					</div>
 					<div class="row">
@@ -83,49 +122,56 @@
 						<p>This chart shows the number of goals and assists made against each opponent played.</p>
 					</div>
 
-                    
+
 				</div>
 			</div>
 		</div>
 	</div>
 
-    <div class="container">
-        <div class="row">
+	<div class="container">
+		<div class="row">
 			<div class="col-6">
-                <div class="row justify-content-center">
-                    <h5>Total Goals Per Person</h5>
-                </div>	
-                <div class="row justify-content-center"> 
-                    <div id="per-person-chart"></div>                
-                </div>
-                <div class="row">
-                    <p>This chart shows the number of goals each player has scored compared to the total goals scored.</p>
-                </div>	
+				<div class="row justify-content-center">
+					<h5>Total Goals Per Person</h5>
+				</div>
+				<div class="row justify-content-center">
+					<div id="per-person-chart"></div>
+				</div>
+				<div class="row">
+					<p>This chart shows the number of goals each player has scored compared to the total goals scored.
+					</p>
+				</div>
 			</div>
 
-            <div class="col-6">
-                <div class="row justify-content-center">            
-                    <h5>Total Goals Per Opponent</h5>                
-                </div>	
-                <div class="row justify-content-center">
-                    <div id="per-store-chart"></div>
-                </div> 
-                <div class="row">
-                    <p>This chart shows the number of goals scored player againsty the various opponents faced.</p>
-                </div>	              
-            </div>
+			<div class="col-6">
+				<div class="row justify-content-center">
+					<h5>Total Goals Per Opponent</h5>
+				</div>
+				<div class="row justify-content-center">
+					<div id="per-store-chart"></div>
+				</div>
+				<div class="row">
+					<p>This chart shows the number of goals scored player againsty the various opponents faced.</p>
+				</div>
+			</div>
 		</div>
 	</div>
-    <div class="container">
-            <div class="row justify-content-center">               
-                <a class="btn btn-primary" href="form.html" role="button">Input</a>
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<div class="row justify-content-center">
+			<a class="btn btn-primary" href="form.html" role="button">Input</a>
+		</div>
+	</div>
+	</div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+	</script>
 
 	<script>
 		queue()
