Set up new js file for homepage. Renamed existing js file to form.js

--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<!--------------------------->
 	<!--My JavaScript link-------------->
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/form.js"></script>
 
 
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
