--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					</div>
 					<div class="row justify-content-center">
 						<p>This chart shows the number of games each player has played split between the number of
-							matches started and the number to which they were a substitute.</p>
+							matches started and the number of which they were a substitute.</p>
 					</div>
 				</div>
 
@@ -151,7 +151,7 @@
 					<div id="per-store-chart"></div>
 				</div>
 				<div class="row">
-					<p>This chart shows the number of goals scored player againsty the various opponents faced.</p>
+					<p>This chart shows the number of goals scored against the various opponents faced.</p>
 				</div>
 			</div>
 		</div>
