--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 					<div class="row justify-content-center">
 						<h5>Match Attendance Start/Sub</h5>
 					</div>
-					<div class="container charts">
-						<div class="row">
+					<div class="container">
+						<div style="width:100%">
 							<div id="attendance-chart"></div>
 						</div>
 					</div>
@@ -90,8 +90,8 @@
 					<div class="row justify-content-center">
 						<h5>Ratings Chart</h5>
 					</div>
-					<div class="container charts">
-						<div class="row">
+					<div class="container">
+						<div style="width:100%">
 							<div id="composite-chart"></div>
 						</div>
 					</div>
@@ -106,8 +106,8 @@
 					<div class="row justify-content-center">
 						<h5>Total Goals/Assists Per Person</h5>
 					</div>
-					<div class="container charts">
-						<div class="row">
+					<div class="container">
+						<div style="width:100%">
 							<div id="goals-per-person-chart"></div>
 						</div>
 					</div>
@@ -119,7 +119,7 @@
 					<div class="row justify-content-center">
 						<h5>Total Goals/Assists Per Opponent</h5>
 					</div>
-					<div class="container charts">
+					<div class="container">
 						<div style="width:100%">
 							<div id="goals-per-opponent-chart"></div>
 						</div>
