Applying SelectMenu functionality.

--- a/index.html
+++ b/index.html
@@ -55,14 +55,10 @@
 		</div>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="btn-group">
-					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown"                 aria-haspopup="true" aria-expanded="false">Player Names
-                    </button>
-					<div class="dropdown-menu" id="player-menu">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<a class="dropdown-item" href="#">Something else here</a>
-						<a class="dropdown-item" href="#">Separated link</a>
+				<div id="select1">
+					<div>
+						<a class='reset' href='javascript:select1.filterAll();dc.redrawAll();'
+							style='visibility: hidden;'>reset</a>
 					</div>
 				</div>
 			</div>
@@ -84,7 +80,7 @@
 						<p>This chart shows the number of games each player has played split between the number of
 							matches started and the number of which they were a substitute.</p>
 					</div>
-				</div> 
+				</div>
 
 				<div class="col-12 col-lg-6">
 					<div class="row justify-content-center">
@@ -172,7 +168,7 @@
 
 
 	<script>
-       
+
 	</script>
 </body>
 
