Added css styling to chart areas. relocated chart legends to lhs.

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 		</div>
 
 
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
-				<div class="col-12 col-lg-6">
+				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
 						<h5>Match Attendance Start/Sub</h5>
 					</div>
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 
-				<div class="col-12 col-lg-6">
+				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
 						<h5>Ratings Chart</h5>
 					</div>
@@ -95,7 +95,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-12 col-lg-6">
+				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
 						<h5>Total Goals/Assists Per Person</h5>
 					</div>
@@ -108,7 +108,7 @@
 						<p>This chart shows the number of goals and assists each player made.</p>
 					</div>
 				</div>
-				<div class="col-12 col-lg-6">
+				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
 						<h5>Total Goals/Assists Per Opponent</h5>
 					</div>
@@ -129,7 +129,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-6">
+			<div class="col-6 chart">
 				<div class="row justify-content-center">
 					<h5>Total Goals Per Person</h5>
 				</div>
@@ -142,7 +142,7 @@
 				</div>
 			</div>
 
-			<div class="col-6">
+			<div class="col-6 chart">
 				<div class="row justify-content-center">
 					<h5>Total Goals Per Opponent</h5>
 				</div>
