--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<!--My JavaScript link-------------->
 	<script type="text/javascript" src="js/main.js"></script>
 
-	<link rel="stylesheet" href="css/style.css" type="text/css" /> 
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
 <body>
@@ -56,8 +56,8 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div id="select1">
-					
-				</div>  
+
+				</div>
 			</div>
 		</div>
 
@@ -125,41 +125,42 @@
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="container">
-		<div class="row">
-			<div class="col-6 chart">
-				<div class="row justify-content-center">
-					<h5>Total Goals Per Person</h5>
-				</div>
-				<div class="row justify-content-center">
-					<div id="per-person-chart"></div>
-				</div>
-				<div class="row">
-					<p>This chart shows the number of goals each player has scored compared to the total goals scored.
-					</p>
-				</div>
-			</div>
 
-			<div class="col-6 chart">
-				<div class="row justify-content-center">
-					<h5>Total Goals Per Opponent</h5>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-6 chart">
+					<div class="row justify-content-center">
+						<h5>Total Goals Per Person</h5>
+					</div>
+					<div class="row justify-content-center">
+						<div id="per-person-chart"></div>
+					</div>
+					<div class="row">
+						<p>This chart shows the number of goals each player has scored compared to the total goals
+							scored.
+						</p>
+					</div>
 				</div>
-				<div class="row justify-content-center">
-					<div id="per-store-chart"></div>
-				</div>
-				<div class="row">
-					<p>This chart shows the number of goals scored against the various opponents faced.</p>
+
+				<div class="col-6 chart">
+					<div class="row justify-content-center">
+						<h5>Total Goals Per Opponent</h5>
+					</div>
+					<div class="row justify-content-center">
+						<div id="per-store-chart"></div>
+					</div>
+					<div class="row">
+						<p>This chart shows the number of goals scored against the various opponents faced.</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="container">
-		<div class="row justify-content-center">
-			<a class="btn btn-primary" href="form.html" role="button">Input</a>
+		<div class="container">
+			<div class="row justify-content-center">
+				<a class="btn btn-primary" href="form.html" role="button">Input</a>
+			</div>
 		</div>
-	</div>
 	</div>
 
 
