--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>D3 and Scalable Vector Graphics</title>
 
+    <!-- Bootstrap js files -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
 	</script>
@@ -17,26 +18,22 @@
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 	</script>
 
-	<!-- Bootstrap CSS -->
+<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-	<!-- dc CSS -->
+<!-- dc CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.min.css" type="text/css" />
-
-	<!-- d3 charting library -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
-	<!-- Crossfilter charting library -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js">
-	</script>
-	<!-- dc charting library -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
-	<!-- queue charting library -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-queue/1.0.7/d3-queue.min.js"></script>
-
-	<!--My JavaScript link-------------->
-	<script type="text/javascript" src="js/main.js"></script>
-
+<!-- d3 charting library -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.min.js" integrity="sha256-m0QmIsBXcOMiETRmpT3qg2IQ/i0qazJA2miCHzOmS1Y=" crossorigin="anonymous"></script>
+<!-- Crossfilter charting library -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js" integrity="sha256-T9tvV3x+/vCnCoFciKNZwbaJ46q9lh6iZjD0ZjD95lE=" crossorigin="anonymous"></script>
+<!-- dc charting library -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dc/3.2.0/dc.min.js" integrity="sha256-G6hLu4NCF+gL+fRT5uI3mUrqWLJh6p9UACtYSxKS+yk=" crossorigin="anonymous"></script>
+<!-- queue charting library -->
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js" integrity="sha256-wvO537iwaZblh5EKbL0aQlyjjtADksAZ1fqH/U0zdmA=" crossorigin="anonymous"></script>-->
+<!--My JavaScript link-------------->
+	<script type="text/javascript" src="js/main1.js"></script>
+<!--My css link-------------->
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
