--- a/index1.html
+++ b/index1.html
@@ -61,9 +61,7 @@
 		</div>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div id="select1">
-
-				</div>
+				<div id="select1"></div> 
 			</div>
 		</div>
 
