Restructured code declarations for ease of reading. Bug not fixed!
Fixes PeterKellett/project-2#22

--- a/index1.html
+++ b/index1.html
@@ -89,7 +89,7 @@
 					</div>
 					<div class="container">
 						<div style="width:100%">
-							<div id="composite-chart"></div>
+							<div id="ratings-composite-chart"></div>
 						</div>
 					</div> 
 					<div class="row justify-content-center">
