Added chart numbers for ease of explaining troubleshooting.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div class="row">
 				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
-						<h5>Match Attendance Start/Sub</h5>
+						<h5><em>(Chart 1)</em> Match Attendance Start/Sub</h5>
 					</div>
 					<div class="container">
 						<div style="width:100%">
@@ -85,7 +85,7 @@
 
 				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
-						<h5>Ratings Chart</h5>
+						<h5><em>(Chart 2)</em> Ratings Chart</h5>
 					</div>
 					<div class="container">
 						<div style="width:100%">
@@ -101,7 +101,7 @@
 			<div class="row">
 				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
-						<h5>Total Goals/Assists Per Person</h5>
+						<h5><em>(Chart 3)</em> Total Goals/Assists Per Person</h5>
 					</div>
 					<div class="container">
 						<div style="width:100%">
@@ -114,7 +114,7 @@
 				</div>
 				<div class="col-12 col-lg-6 chart">
 					<div class="row justify-content-center">
-						<h5>Total Goals/Assists Per Opponent</h5>
+						<h5><em>(Chart 4)</em> Total Goals/Assists Per Opponent</h5>
 					</div>
 					<div class="container">
 						<div style="width:100%">
@@ -132,7 +132,7 @@
 			<div class="row">
 				<div class="col-6 chart">
 					<div class="row justify-content-center">
-						<h5>Total Goals Per Person</h5>
+						<h5><em>(Chart 5)</em> Total Goals Per Person</h5>
 					</div>
 					<div class="row justify-content-center">
 						<div id="goals-per-person-piechart"></div>
@@ -146,7 +146,7 @@
 
 				<div class="col-6 chart">
 					<div class="row justify-content-center">
-						<h5>Total Goals Per Opponent</h5>
+						<h5><em>(Chart 6)</em> Total Goals Per Opponent</h5>
 					</div>
 					<div class="row justify-content-center">
 						<div id="goals-per-opponent-piechart"></div>
