Relocated table to bottom of page to aid testing.

--- a/index.html
+++ b/index.html
@@ -170,26 +170,31 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div id='data-table'>
-				<!-- create a custom header -->
-				<div class='header'>
-					<span>Name</span>
-					<span>Matches</span>
-					<span>Goals</span>
-					<span>Assists</span>
-					<span>Avg Rating</span>
-				</div>
-				<!-- data rows will filled in here -->
-			</div>
-		</div>
+
 		<div class="container">
 			<div class="row justify-content-center">
 				<a class="btn btn-primary" href="form.html" role="button">Input</a>
 			</div>
 		</div>
 	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12">
+				<div id='data-table'>
+					<!-- create a custom header -->
+					<div class='header'>
+						<span>Name</span>
+						<span>Matches</span>
+						<span>Goals</span>
+						<span>Assists</span>
+						<span>Avg Rating</span>
+					</div>
+					<!-- data rows will filled in here -->
+				</div>
+			</div>
+		</div>
 
+	</div>
 
 
 	<script>
