Rendered assists pie charts successfully.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					</div>
 					<div class="row justify-content-center">
 						<div class="col-6">
-							<div id="count-goals-per-person"></div>
+							<div id="assists-per-person-piechart"></div>
 
 						</div>
 						<div class="col-6">
@@ -151,7 +151,7 @@
 					</div>
 					<div class="row justify-content-center">
 						<div class="col-6">
-							<div id="count-goals-per-opponent">
+							<div id="assists-per-opponent-piechart">
 
 							</div>
 						</div>
